Fix perspective context menu border not visible

--- a/uberfire-workbench/uberfire-workbench-client-views-patternfly/src/main/resources/org/uberfire/client/views/static/uberfire-patternfly.css
+++ b/uberfire-workbench/uberfire-workbench-client-views-patternfly/src/main/resources/org/uberfire/client/views/static/uberfire-patternfly.css
@@ -274,6 +274,10 @@
     left: auto;
 }
 
+.navbar-pf .navbar-primary.persistent-secondary > li.active {
+    margin-bottom: 33px;
+}
+
 .navbar-pf .navbar-primary.persistent-secondary > li.active:not(.uf-perspective-context-menu-container) {
     margin-bottom: 0px;
 }
